--- a/index.html
+++ b/index.html
@@ -40,7 +40,14 @@
   <div class="header-inner">
     <div class="logo">Durian-Quiamco</div>
     <div class="header-buttons">
-      <button class="menu-btn">Menu</button>
+      <button class="menu-btn">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span class="menu-text">Menu</span>
+      </button>
+
+
       <a href="#contact" class="btn btn-small">Book Appointment</a>
     </div>
   </div>
@@ -165,6 +172,7 @@
   <footer class="footer">
     <p>&copy; 2025 Durian-Quiamco Dental Clinic. All rights reserved.</p>
   </footer>
+  <button id="back-to-top" title="Back to top">&#8679;</button>
 
   <script src="./js/script.js"></script>
 </body>
