--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
         <ul>
           <li><a href="about-us.html">About Us</a></li>
           <a>- Mission and Vision</a>
-          <li><a href="#">Our Purpose</a></li>
-          <li><a href="#">Our Values</a></li>
-          <li><a href="#">Careers</a></li>
-          <li><a href="#">Employees</a></li>
+          <a>- Our Purpose</a>
+          <a>- Our Values</a>
+          <a>- Careers</a>
+          <a>- Employees</a>
         </ul>
       </div>
     </div>
@@ -232,4 +232,5 @@
 
   <script src="./js/script.js"></script>
 </body>
+
 </html>
