--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
         <h3>Company</h3>
         <ul>
           <li><a href="about-us.html">About Us</a></li>
-          <a>- Mission and Vision</a>
-          <a>- Our Purpose</a>
-          <a>- Our Values</a>
-          <a>- Careers</a>
-          <a>- Employees</a>
+          <li>- Mission and Vision</li>
+          <li>- Our Purpose</li>
+          <li>- Our Values</li>
+          <li>- Careers</li>
+          <li>- Employees</li>
         </ul>
       </div>
     </div>
@@ -234,3 +234,4 @@
 </body>
 
 </html>
+
